--- a/index.html
+++ b/index.html
@@ -4,20 +4,22 @@
   <meta charset="UTF-8">
   <title>Protect Insurance - Quote</title>
 
-  <!-- Google Tag Manager -->
-  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-  })(window,document,'script','dataLayer','GTM-XXXXXXX');</script>
-  <!-- End Google Tag Manager -->
+  <script>
+  document.getElementById("quoteButton").addEventListener("click", function() {
+    window.dataLayer = window.dataLayer || [];
+    window.dataLayer.push({
+      event: "quote_button_click",
+      button_name: "Request Quote"
+    });
+  });
+</script>
+
 </head>
 <body>
-  <!-- Google Tag Manager (noscript) -->
-  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-XXXXXXX"
-  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-  <!-- End Google Tag Manager (noscript) -->
-
+ <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PX5RLWMX"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
   <h1>Get a Quote</h1>
   <p>Welcome to Protect Insurance. Click below to request a quote.</p>
   <button id="quoteButton">Request Quote</button>
